--- a/project-folder/Ducument.ipynb
+++ b/project-folder/Ducument.ipynb
@@ -226,6 +226,7 @@
     "│\n",
     "├── etl_script.ipynb            # Jupyter notebook for ETL and processing\n",
     "├── ducument.ipynb              # Project description\n",
+    "├── Sales_dataframe.rar         # Main data\n",
     "├── tables/                     # Folder with CSV or Excel versions of each table\n",
     "│   ├── sales_data.csv\n",
     "│   ├── customers.csv\n",
